--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -47,3 +47,11 @@ body > .container-fluid {
 
 // injector
 // endinjector
+.md-button.md-default-theme {
+	padding: 15px;
+}
+
+md-tabs.md-default-theme md-tabs-ink-bar {
+	background: black;
+	color: black;
+}
