--- a/src/components/header/header.html
+++ b/src/components/header/header.html
@@ -25,9 +25,9 @@
                     <a href="#"><i class="fa fa-question-circle"></i> Help</a>
                 </li>
                 <li class="dropdown" dropdown>
-                        <a href class="dropdown-toggle" dropdown-toggle>
+                        <md-button class="dropdown-toggle" dropdown-toggle>
         			Dropdown <span class="caret">
-      			</a>
+      			</md-button>
                         <ul class="dropdown-menu">
                             <li>
                                 <a href>Item1</a>
