Modals are ready

--- a/src/app/chips/chips.html
+++ b/src/app/chips/chips.html
@@ -125,7 +125,7 @@
 	</section>
 
 	<section layout="row" layout-wrap style="text-align: left">
-		<md-content class="md-padding" layout="column">
+		<md-content class="md-padding nobackground" layout="column">
 		    <p>Display a set of items as chips.</p>
 		    <md-chips>
 		      <md-chip>Hockey</md-chip>
