examples of lists

--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -416,6 +416,10 @@ md-option[selected] {
 	font-weight: 700;
 }
 
+.md-subheader .md-subheader-inner {
+	font-weight: 700;
+}
+
 
 /*====MEDIA====*/
 
