--- a/src/app/modals/modals.html
+++ b/src/app/modals/modals.html
@@ -22,7 +22,9 @@
 			  useWrapMode : true,
 			  theme:'merbivore',
 			  mode: 'html'}">
-
+&#x3C;md-button class=&#x22;md-raised mx-button primary-btn&#x22; ng-click=&#x22;showConfirm($event)&#x22;&#x3E;
+&#x9;&#x9;        Confirm Dialog
+&#x9;&#x9;      &#x3C;/md-button&#x3E;
 			</div>	
 		</md-tab>
 		<md-tab label="CSS">
