--- a/src/app/modals/dialog1.tmpl.html
+++ b/src/app/modals/dialog1.tmpl.html
@@ -6,7 +6,7 @@
       <p>
         The mango is a juicy stone fruit belonging to the genus Mangifera, consisting of numerous tropical fruiting trees, cultivated mostly for edible fruit. The majority of these species are found in nature as wild mangoes. They all belong to the flowering plant family Anacardiaceae. The mango is native to South and Southeast Asia, from where it has been distributed worldwide to become one of the most cultivated fruits in the tropics.
       </p>
-      <img style="max-width: 100%; float: left; margin: 15px 15px 15px 0;" alt="Lush mango tree" src="http://ru.biotrack/wp-content/uploads/2015/05/imamage3.jpg">
+      <img style="max-width: 100%; float: left; margin: 15px 15px 15px 0;" alt="Lush mango tree" src="assets/images/imamage4.jpg">
       <p>
         The highest concentration of Mangifera genus is in the western part of Malesia (Sumatra, Java and Borneo) and in Burma and India. While other Mangifera species (e.g. horse mango, M. foetida) are also grown on a more localized basis, Mangifera indica&mdash;the "common mango" or "Indian mango"&mdash;is the only mango tree commonly cultivated in many tropical and subtropical regions.
       </p>
