save all. today are ready buttons, form elements, radio &checkboxes, progress, chips, modals and lists

--- a/src/app/form_elements/vehicles.html
+++ b/src/app/form_elements/vehicles.html
@@ -1,4 +1,4 @@
-<md-toolbar class="md-whiteframe-z1">
+<md-toolbar class="md-whiteframe-z1"> 
     <div class="md-toolbar-tools panel2" layout="row">
 		<div flex>
 			<h2 class="black-clr">FORM ELEMENTS</h2>
@@ -156,7 +156,47 @@
 			  theme:'merbivore',
 			  mode: 'javascript'}">
 		
-		        
+(function() {
+    'use strict';
+
+    angular.module('fm')
+        .controller('vehiclesCtrl', vehicleCtrl);
+
+    vehicleCtrl.$inject = ['$scope']
+
+    function vehicleCtrl($scope) {
+        var vm = this;
+
+        $scope.user = {
+	      title: 'Developer',
+	      email: 'ipsum@lorem.com',
+	      firstName: '',
+	      lastName: '' ,
+	      company: 'Google' ,
+	      address: 'London 484 str., England' ,
+	      city: 'Mountain View' ,
+	      state: 'CA' ,
+	      biography: 'Textarea',
+	      postalCode : '94043'
+	    };
+
+		$scope.project = {
+		  description: 'Nuclear Missile Defense System',
+		  rate: 500
+		};
+
+	    $scope.user = {
+	      name: 'John Doe',
+	      email: '',
+	      phone: '',
+	      address: 'Mountain View, CA'
+	    };
+
+    };
+
+
+})();
+      
 
     			</div>	
 		</md-tab>
