--- a/src/app/progress_bars/contacts.html
+++ b/src/app/progress_bars/contacts.html
@@ -1,4 +1,4 @@
-<md-toolbar class="md-whiteframe-z1">
+<md-toolbar class="md-whiteframe-z1"> 
     <div class="md-toolbar-tools panel2" layout="row">
 		<div flex>
 			<h2 class="black-clr">PEROGRESS</h2>
@@ -62,8 +62,28 @@
 			  theme:'merbivore',
 			  mode: 'javascript'}">
 		
-		        
+(function() {
+    'use strict';
 
+    angular.module('fm')
+        .controller('contactCtrl', conCtrl);
+
+	conCtrl.$inject = ['$scope', '$interval',];
+
+    function conCtrl($scope, $interval) {
+		var vm = this;
+
+		  $scope.mode = 'query';
+	      $scope.determinateValue = 10;
+	      $interval(function() {
+	        $scope.determinateValue += 1;
+	        if ($scope.determinateValue > 100) {
+	          $scope.determinateValue = 10;
+	        }
+	      }, 100, 0, true);
+	    };
+
+})();
     			</div>	
 		</md-tab>
 	</md-tabs>
