--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -98,6 +98,9 @@ header {
  	background: none!important;
  }
 
+.buttondemoBasicUsage md-content {
+	margin-right:0;
+}
 
 
 
@@ -108,6 +111,7 @@ $primary: #224868!important;
 $warn: #e64c65!important;
 $success: #5f9e8b!important;
 $white: #fff!important;
+$simple: #fafafa!important;
 $text-clr: #333!important;
 
 $primary-rgba: rgba(0, 24, 80, 0.3)!important;
@@ -422,6 +426,25 @@ md-option[selected] {
 
 .face {
 	margin: 15px 20px 0 0
+}
+
+//Toolbars
+
+.success-toolbar {
+	background: $success
+}
+
+.primary-toolbar {
+	background: $primary
+}
+
+.warn-toolbar {
+	background: $warn
+}
+
+.simple-toolbar {
+	background: $simple;
+	color: $text-clr;
 }
 
 
