--- a/src/app/scroll-content/scroll-content.html
+++ b/src/app/scroll-content/scroll-content.html
@@ -1,7 +1,7 @@
 <md-toolbar class="md-whiteframe-z1">  
     <div class="md-toolbar-tools panel2" layout="row">
 		<div flex> 
-			<h2 class="black-clr">TOOLBARS</h2>
+			<h2 class="black-clr">SCROLL CONTENT</h2>
 		</div>
 		<div flex>
 			<div style="text-align: right;">
