the Toolbars with icons was created

--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -449,6 +449,15 @@ md-option[selected] {
 .simple-toolbar {
 	background: $simple;
 	color: $text-clr;
+
+	md-icon {
+		color: $text-clr;
+	}
+}
+
+md-toolbar.md-default-theme md-icon {
+	font-size: 18px;
+	padding-top: 5px;
 }
 
 //tabs
