tooltips are ready

--- a/src/app/toolbars/toolbar.html
+++ b/src/app/toolbars/toolbar.html
@@ -22,7 +22,24 @@
 			  useWrapMode : true,
 			  theme:'merbivore',
 			  mode: 'html'}">
-
+&#x3C;!--Toolbars--&#x3E;
+&#x9;&#x9;    &#x3C;md-toolbar class=&#x22;primary-toolbar&#x22;&#x3E;
+&#x9;&#x9;      &#x3C;div class=&#x22;md-toolbar-tools&#x22;&#x3E;
+&#x9;&#x9;        &#x3C;md-button class=&#x22;md-icon-button&#x22; aria-label=&#x22;Settings&#x22;&#x3E;
+&#x9;&#x9;          &#x3C;md-icon class=&#x22;fa fa-bars&#x22;&#x3E;&#x3C;/md-icon&#x3E;
+&#x9;&#x9;        &#x3C;/md-button&#x3E;
+&#x9;&#x9;        &#x3C;h2&#x3E;
+&#x9;&#x9;          &#x3C;span&#x3E;Toolbar with Icon Buttons&#x3C;/span&#x3E;
+&#x9;&#x9;        &#x3C;/h2&#x3E;
+&#x9;&#x9;        &#x3C;span flex&#x3E;&#x3C;/span&#x3E;
+&#x9;&#x9;        &#x3C;md-button class=&#x22;md-icon-button&#x22; aria-label=&#x22;Favorite&#x22;&#x3E;
+&#x9;&#x9;          &#x3C;md-icon class=&#x22;fa fa-envelope-o&#x22;&#x3E;&#x3C;/md-icon&#x3E;
+&#x9;&#x9;        &#x3C;/md-button&#x3E;
+&#x9;&#x9;        &#x3C;md-button class=&#x22;md-icon-button&#x22; aria-label=&#x22;More&#x22;&#x3E;
+&#x9;&#x9;          &#x3C;md-icon class=&#x22;fa fa-ellipsis-v&#x22;&#x3E;&#x3C;/md-icon&#x3E;
+&#x9;&#x9;        &#x3C;/md-button&#x3E;
+&#x9;&#x9;      &#x3C;/div&#x3E;
+&#x9;&#x9;    &#x3C;/md-toolbar&#x3E;
 			</div>	
 		</md-tab>
 		<md-tab label="CSS">
@@ -30,8 +47,10 @@
 			  useWrapMode : true,
 			  theme:'merbivore',
 			  mode: 'css'}">	
-
-
+.success-toolbar
+.primary-toolbar
+.warn-toolbar
+.simple-toolbar
     			</div>	
 		</md-tab>
 		<md-tab label="JS">
