toasts was created

--- a/src/app/chips/chips.html
+++ b/src/app/chips/chips.html
@@ -82,7 +82,7 @@
 		      </md-chip-template>
 		    </md-chips>
 		    <br/>
-		    <md-checkbox ng-model="chips.readonly">Readonly</md-checkbox>
+		    <md-checkbox ng-model="chips.readonly" class="primary-checkbox">Readonly</md-checkbox>
 		  </md-content>
 		</div>		
    	</section>
