bottom toggle menu

--- a/src/app/bottom-menu/bottom-menu.html
+++ b/src/app/bottom-menu/bottom-menu.html
@@ -47,7 +47,7 @@
 	</md-tabs>
 
    	
-   	<section layout="row" layout-sm="column" layout-wrap layout-padding style="text-align: left; height: 450px">
+   	<section layout="row" layout-sm="column" layout-wrap layout-padding style="text-align: left; height: 450px" ng-controller="BottomSheetExample">
    		<div flex>
 		  <p style="padding-left: 20px;" class="md-body-1">
 		    Bottom sheet can be dismissed with the service or a swipe down.
