--- a/src/app/tooltips/tooltips.html
+++ b/src/app/tooltips/tooltips.html
@@ -22,7 +22,12 @@
 			  useWrapMode : true,
 			  theme:'merbivore',
 			  mode: 'html'}">
-
+&#x3C;!--TOOLTIP--&#x3E;
+&#x9;&#x9;    &#x9;&#x3C;md-button class=&#x22;md-fab success-btn&#x22; aria-label=&#x22;Tooltip&#x22; aria-label=&#x22;Insert Drive&#x22;&#x3E;
+&#x9;&#x9;            &#x3C;i class=&#x22;fa fa-line-chart&#x22;&#x3E;&#x3C;/i&#x3E;
+&#x9;&#x9;            &#x3C;md-tooltip md-visible=&#x22;demo.showTooltip&#x22;&#x3E;
+&#x9;&#x9;&#x9;        &#x9;Tooltip
+&#x9;&#x9;&#x9;      &#x9;&#x3C;/md-tooltip&#x3E;
 			</div>	
 		</md-tab>
 		<md-tab label="CSS">
