--- a/src/app/bottom-menu/bottom-sheet-grid-template.html
+++ b/src/app/bottom-menu/bottom-sheet-grid-template.html
@@ -3,7 +3,7 @@
   <md-list>
     <md-list-item ng-repeat="item in items">
       <md-button class="md-grid-item-content" ng-click="listItemClick($index)">
-        <md-icon md-svg-src="{{item.icon}}"></md-icon>
+        <md-icon class="{{item.icon}}"></md-icon>
         <div class="md-grid-text"> {{ item.name }} </div>
       </md-button>
     </md-list-item>
