--- a/src/app/bottom-menu/bottom-sheet-list-template.html
+++ b/src/app/bottom-menu/bottom-sheet-list-template.html
@@ -3,7 +3,7 @@
   <md-list>
     <md-list-item ng-repeat="item in items">
       <md-button class="md-list-item-content" ng-click="listItemClick($index)">
-        <md-icon md-svg-src="{{item.icon}}"></md-icon>
+        <md-icon class="{{item.icon}}"></md-icon>
         <span class="md-inline-list-icon-label">{{ item.name }}</span>
       </md-button>
     </md-list-item>
