--- a/src/app/autocomplete/autocomplete.html
+++ b/src/app/autocomplete/autocomplete.html
@@ -49,7 +49,7 @@
    	
    	<section layout="row" layout-sm="column" layout-wrap layout-padding style="text-align: left">
 		<div flex ng-controller="DemoCtrl as ctrl">
-		  <md-content layout-padding layout="column">
+		  <md-content layout-padding layout="column" class="nobackground">
 		    <form ng-submit="$event.preventDefault()">
 		      <p>Use <code>&lt;md-autocomplete&gt;</code> to search for matches from local or remote data sources.</p>
 		      <md-autocomplete
@@ -78,5 +78,28 @@
 		    </form>
 		  </md-content>
 	    </div>
+	</section>
+
+	<section ng-controller="DemoCtrl as ctrl">
+	  <md-content layout-padding layout="column" class="nobackground">
+	    <form ng-submit="$event.preventDefault()">
+	      <p>The following example demonstrates floating labels being used as a normal form element.</p>
+	      <div layout-gt-sm="row">
+	        <md-input-container flex>
+	          <label>Name</label>
+	          <input type="text"/>
+	        </md-input-container>
+	        <md-autocomplete flex
+	            md-no-cache="ctrl.noCache"
+	            md-selected-item="ctrl.selectedItem"
+	            md-search-text="ctrl.searchText"
+	            md-items="item in ctrl.querySearch(ctrl.searchText)"
+	            md-item-text="item.display"
+	            md-floating-label="Favorite state">
+	          <span md-highlight-text="ctrl.searchText">{{item.display}}</span>
+	        </md-autocomplete>
+	      </div>
+	    </form>
+	  </md-content>		
 	</section>
 </md-content>
